Render DFCs correctly in commander drilldowns, fix spacing on DFCs

--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -65,10 +65,10 @@ img {
 .partners .partner1 {
   z-index: 2;
   position: absolute;
-  height: 80%;
+  height: 85%;
   width: auto;
   left: 0;
-  bottom: 32px;
+  bottom: 8px;
 }
 
 .partners .partner2 {
@@ -76,7 +76,7 @@ img {
   position: absolute;
   bottom: 0;
   width: auto;
-  height: 80%;
+  height: 85%;
   right: 0;
   top: 0;
 }
